methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:3: error: value to1 is not a member of Int
  for(i2<-0 to1){
            ^